--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,6 +24,12 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+
+<script src="/js/mapQuest.js"></script>
+
+<script src="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.js"></script>
+<link type="text/css" rel="stylesheet" href="https://api.mqcdn.com/sdk/mapquest-js/v1.3.2/mapquest.css"/>
+
 </head>
 
 <body>
@@ -37,7 +43,9 @@
 
     <div id="mapQuest" class="profile">
       <h3>Event Location</h3>
-      <div id="map" style="max-height: 400px;"></div>
+      <div id="map" style="max-height: 400px;">
+      	
+      </div>
     </div> 
 
     <hr>
@@ -81,7 +89,7 @@
         </div>
       </div>
       <div class="row">
-       <!--  <div class="col-6">
+         <div class="col-6">
           <div id="camera" class="profile" style="max-width: 250px;">
             <video autoplay id="camera-video"></video>
             <button id="camera-button" class="btn btn-primary">Take Photo</button>
@@ -91,7 +99,7 @@
         <div class="col-6">
           <canvas id="camera-canvas"></canvas>
         </div>
-        -->
+       
       </div>
 
       <h3>RSVP Form</h3>
